--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/forms": "^0.5.2",
     "@tailwindcss/typography": "^0.5.2",
     "autoprefixer": "^10.4.7",
+    "neo4j-driver": "^4.4.6",
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
