--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.33.0",
     "tailwind": "^4.0.0",
     "tailwindcss": "^3.1.4"
   },
