--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gmfi",
-  "version": "1.1.1",
+  "version": "1.2.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -16,6 +16,7 @@
     "@tailwindcss/typography": "^0.5.2",
     "autoprefixer": "^10.4.7",
     "axios": "^0.27.2",
+    "graphviz-react": "^1.2.0",
     "neo4j-driver": "^4.4.6",
     "next": "12.1.6",
     "react": "18.2.0",
